# ChangeLog for dev-lang/wml
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/wml/Attic/ChangeLog,v 1.35 2007/04/19 00:12:22 gustavoz Exp $

  19 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org> wml-2.0.11-r1.ebuild:
  Stable on sparc wrt #173623

  09 Apr 2007; Raúl Porcel <armin76@gentoo.org> wml-2.0.11-r1.ebuild:
  ia64 stable wrt bug 173623

  07 Apr 2007; nixnut <nixnut@gentoo.org> wml-2.0.11-r1.ebuild:
  Stable on ppc wrt bug 173623

  07 Apr 2007; Christian Faulhammer <opfer@gentoo.org> wml-2.0.11-r1.ebuild:
  stable x86/amd64, bug 173623

*wml-2.0.11-r1 (07 Apr 2007)

  07 Apr 2007; Hans de Graaff <graaff@gentoo.org> +wml-2.0.11-r1.ebuild:
  Add custom src_test as per discussion in #173623.

*wml-2.0.11 (06 Mar 2007)

  06 Mar 2007; Hans de Graaff <graaff@gentoo.org> metadata.xml,
  +wml-2.0.11.ebuild:
  Version bump. Take maintainership (at least while I'm still using it myself).

  06 Jan 2007; Danny van Dyk <kugelfang@gentoo.org> -wml-2.0.9.ebuild:
  QA: Removed unused versions.

  02 Dec 2006; Charlie Shepherd <masterdriverz@gentoo.org>
  wml-2.0.9-r1.ebuild:
  Change RDEPEND to DEPEND, thanks to Patrick Lauer for reporting, bug 153037

  22 Oct 2006; Diego Pettenò <flameeyes@gentoo.org> wml-2.0.9-r1.ebuild:
  Fix autotools handling, thanks to Patrick Lauer for reporting in bug #151922.

  20 Oct 2006; Michael Cummings <mcummings@gentoo.org> wml-2.0.9-r1.ebuild:
  Marking amd64 stable

  13 Jul 2006; Aron Griffis <agriffis@gentoo.org> wml-2.0.9-r1.ebuild:
  Mark 2.0.9-r1 stable on ia64

  30 Mar 2006; Aron Griffis <agriffis@gentoo.org> wml-2.0.9-r1.ebuild:
  Mark 2.0.9-r1 ~ia64

  16 Mar 2006; Diego Pettenò <flameeyes@gentoo.org>
  files/wml-2.0.9-autotools-update.patch:
  Revert patch changed by mistake.

  15 Mar 2006; Diego Pettenò <flameeyes@gentoo.org>
  files/wml-2.0.9-autotools-update.patch, +files/wml-2.0.9-gcc41.patch,
  wml-2.0.9-r1.ebuild: