@@ -14,40 +14,25 @@ MD5 22515a540cc3133e7da6990a68abf261 files/wml-2.0.9-gcc41.patch 361
 RMD160 7801e31d2e2d379c148902a697c46bec15cde831 files/wml-2.0.9-gcc41.patch 361
 SHA256 7c983ec6d7f659eb1b152f03b98764df40d51b6b5d1ceb7fbee4a79b695c5e33 files/wml-2.0.9-gcc41.patch 361
 DIST wml-2.0.11.tar.gz 3115230 RMD160 fead82a35d116447b860d7b1c506c6de187355e8 SHA1 14dd7c23461716171a66b65676bca6e19a593007 SHA256 8e11ef19ea67ff9c4b28ff0fcacf5098881ac0c5f09ddfe3abc29f1e12be5d4a
-DIST wml-2.0.9.tar.gz 2570742 RMD160 bf14a4c09bdd850c5bad5f48f712717a13b13412 SHA1 ce95ad9c55fd52e2028099d391858d88cffd5d9f SHA256 0d4b2fdf05c8a9597bcfbdcf34268d47f9c5846c62550b65eb5e7abfe89eaa89
 EBUILD wml-2.0.11-r1.ebuild 1638 RMD160 33555233a5d62a798791b116e7b311fa65d13684 SHA1 40207572486bf6d702bfca0fc5ee635dd381d3f7 SHA256 4d0d5a08c72135aa17e211835c4b46a06abab2e52b8061e6bb54af1fce29be7f
 MD5 3860587dff699de5fc04b56e22c5515e wml-2.0.11-r1.ebuild 1638
 RMD160 33555233a5d62a798791b116e7b311fa65d13684 wml-2.0.11-r1.ebuild 1638
 SHA256 4d0d5a08c72135aa17e211835c4b46a06abab2e52b8061e6bb54af1fce29be7f wml-2.0.11-r1.ebuild 1638
-EBUILD wml-2.0.11.ebuild 1472 RMD160 5f83422e1f3c3861503ecfaad64bdb8c6319e4fd SHA1 da00032ee19b2cf2b029eb2c9593ae6d4f845136 SHA256 aced750034c8b694ae99a77d4eb41039936f778cf2936a57450b2adaa8eee58b
-MD5 cef5772b544efb8531c1ca4b80c63591 wml-2.0.11.ebuild 1472
-RMD160 5f83422e1f3c3861503ecfaad64bdb8c6319e4fd wml-2.0.11.ebuild 1472
-SHA256 aced750034c8b694ae99a77d4eb41039936f778cf2936a57450b2adaa8eee58b wml-2.0.11.ebuild 1472
-EBUILD wml-2.0.9-r1.ebuild 1145 RMD160 9253686d1474e27bb7fd8140875a7db924e82d1a SHA1 f680dbe0b46e3a988ad6351ca9ad2233bd7895e0 SHA256 e41a737d2bdc8742572f7cbf6d82e3456319d6f1e61c25fcc029cb85a6c507b1
-MD5 433ec53fcf2ecf6daf803b7a03bc5bd6 wml-2.0.9-r1.ebuild 1145
-RMD160 9253686d1474e27bb7fd8140875a7db924e82d1a wml-2.0.9-r1.ebuild 1145
-SHA256 e41a737d2bdc8742572f7cbf6d82e3456319d6f1e61c25fcc029cb85a6c507b1 wml-2.0.9-r1.ebuild 1145
-MISC ChangeLog 4250 RMD160 85eb9f834549f0744e5ea9c1f7063a3bc81ae231 SHA1 a29295b7de2f29d138133b9e6253a8d10cd3960b SHA256 983b50b1c3b9415c84aa6186f8e736fb3297531599a3774fe69ae1f82630f5d8
-MD5 64d0fb19c577742acfeb3fad025d9779 ChangeLog 4250
-RMD160 85eb9f834549f0744e5ea9c1f7063a3bc81ae231 ChangeLog 4250
-SHA256 983b50b1c3b9415c84aa6186f8e736fb3297531599a3774fe69ae1f82630f5d8 ChangeLog 4250
+MISC ChangeLog 4365 RMD160 712a4865252da415495020d5b7bf84b042b52a62 SHA1 bae2288163b25a3d48dccd376b81226e45a547f7 SHA256 f5080fd44a7a2a7820b6da1aa512eb2f4a0722d24d7d9edb43d78ae5c60216c4
+MD5 d7086da1bb6210ecc9416a32d1cef5b6 ChangeLog 4365
+RMD160 712a4865252da415495020d5b7bf84b042b52a62 ChangeLog 4365
+SHA256 f5080fd44a7a2a7820b6da1aa512eb2f4a0722d24d7d9edb43d78ae5c60216c4 ChangeLog 4365
 MISC metadata.xml 255 RMD160 2e04128b5183df88816f4d226448444d02439c3c SHA1 95202de91147c591bc326f12ec296131aa445e7b SHA256 4791ad0953ab9cd515144e1517b927fe1824859496dd7c84c32af20d5f99c20e
 MD5 546a6fed5e42248515406b71330d0065 metadata.xml 255
 RMD160 2e04128b5183df88816f4d226448444d02439c3c metadata.xml 255
 SHA256 4791ad0953ab9cd515144e1517b927fe1824859496dd7c84c32af20d5f99c20e metadata.xml 255
-MD5 ed23257c267480ff498e5f6edc4455b0 files/digest-wml-2.0.11 235
-RMD160 37fec7cb61c1e4baebc0501b4341d8d71ef7ff22 files/digest-wml-2.0.11 235
-SHA256 a8960fa6468de36d849a8680fb560aa2ba9527c49a134cb88fca4f679bcc48b6 files/digest-wml-2.0.11 235
 MD5 ed23257c267480ff498e5f6edc4455b0 files/digest-wml-2.0.11-r1 235
 RMD160 37fec7cb61c1e4baebc0501b4341d8d71ef7ff22 files/digest-wml-2.0.11-r1 235
 SHA256 a8960fa6468de36d849a8680fb560aa2ba9527c49a134cb88fca4f679bcc48b6 files/digest-wml-2.0.11-r1 235
-MD5 05d11cc9dacf02e3ef8da88a81f1f8ab files/digest-wml-2.0.9-r1 232
-RMD160 95d14387adb9832ac059a5ba8fc985a469f7cb74 files/digest-wml-2.0.9-r1 232
-SHA256 952daeb9da977a7a74b1e3547a434032f2cc13e39ca03004881c4fcf971995d4 files/digest-wml-2.0.9-r1 232
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.4 (GNU/Linux)
+Version: GnuPG v1.4.7 (GNU/Linux)
 
-iD8DBQFGfvoIp/wUKkr7RBoRAikAAKCcTHabppXzxu//fk7SzvbcIlX6gQCg21TS
-4pPcVuv3s4rsdhp9BwMO2rM=
-=BkpJ
+iD8DBQFGolp+0BM77Tkv120RAng5AKDBxakh+SogmGniA2vPlXFM4h/U3wCgmGrz
+OFZ7PvXnTTrJUoS4DrzxhnU=
+=P5A2
 -----END PGP SIGNATURE-----
