@@ -1,3 +1,0 @@
-MD5 a26feebf4e59e9a6940f54c69dde05b5 wml-2.0.11.tar.gz 3115230
-RMD160 fead82a35d116447b860d7b1c506c6de187355e8 wml-2.0.11.tar.gz 3115230
-SHA256 8e11ef19ea67ff9c4b28ff0fcacf5098881ac0c5f09ddfe3abc29f1e12be5d4a wml-2.0.11.tar.gz 3115230
