@@ -1,3 +1,0 @@
-MD5 a7c9da3b58f7e40706e3c29c37b4822b wml-2.0.9.tar.gz 2570742
-RMD160 bf14a4c09bdd850c5bad5f48f712717a13b13412 wml-2.0.9.tar.gz 2570742
-SHA256 0d4b2fdf05c8a9597bcfbdcf34268d47f9c5846c62550b65eb5e7abfe89eaa89 wml-2.0.9.tar.gz 2570742
