@@ -1,6 +1,10 @@
 # ChangeLog for dev-lang/wml
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/wml/Attic/ChangeLog,v 1.35 2007/04/19 00:12:22 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/wml/Attic/ChangeLog,v 1.36 2007/07/21 19:11:59 graaff Exp $
+
+  21 Jul 2007; Hans de Graaff <graaff@gentoo.org> -wml-2.0.9-r1.ebuild,
+  -wml-2.0.11.ebuild:
+  Remove old versions
 
   19 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org> wml-2.0.11-r1.ebuild:
   Stable on sparc wrt #173623
